WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24488
An assertion failure when updating an offline application cache after emptying caches
https://bugs.webkit.org/show_bug.cgi?id=24488
Summary
An assertion failure when updating an offline application cache after emptyin...
Alexey Proskuryakov
Reported
2009-03-10 04:19:08 PDT
Steps to reproduce: 1. Open any offline application. 2. Empty caches via Safari File menu. 3. Reload the cached application. In release builds, this bug results in a moderately severe problem: after emptying caches, the application doesn't ever get stored to disk storage again (until browser restart). Fix forthcoming.
Attachments
proposed fix
(1.52 KB, patch)
2009-03-10 04:22 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-03-10 04:22:51 PDT
Created
attachment 28434
[details]
proposed fix
Darin Adler
Comment 2
2009-03-10 05:44:51 PDT
Comment on
attachment 28434
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 3
2009-03-10 05:58:28 PDT
Committed revision 41550.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug