        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=24488
        An assertion failure when updating an offline application cache after emptying caches

        Emptying appcache cannot be performed automatically, so no test.

        * loader/appcache/ApplicationCacheGroup.cpp:
        (WebCore::ApplicationCacheGroup::checkIfLoadIsComplete): Ensure that the cache is in disk
        storage, even if the application wasn't updated server side.



Canonical link: https://commits.webkit.org/33616@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41550 268f45cc-cd09-0410-ab3c-d52691b4dbfc